# AyniProtocol

./: .gitignore  AyniOracle.vy  AyniVault.vy  AyniVaultCore.vy  AyniVaultFactory.vy  AyniVaultRegistry.vy  README.md  architecture.md  foundry.toml
docs/: README.md
docs/adr/: 0000-template.md  README.md
docs/explanation/: README.md  architecture.md
docs/how-to/: README.md
docs/reference/: README.md
docs/tutorials/: README.md
intents-bot-solver/: .env.example  Cargo.toml  README.md
intents-bot-solver/src/: main.rs
intents-router/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
intents-router/src/: abi.rs  config.rs  error.rs  lib.rs  main.rs  persistence.rs  router.rs  state.rs
intents-router/src/evm/: decoder.rs  mod.rs  poller.rs
intents-router/src/near/: client.rs  mod.rs  types.rs  ws.rs
intents-router/tests/: decoder.rs  e2e.rs
interfaces/: IERC20.vy
oracle/: .env.example  Cargo.toml  README.md
oracle/src/: main.rs
script/: DeployOracle.s.sol  DeployProtocol.s.sol  ScriptBase.sol  verify_protocol.sh
src/: AyniDestinationSettler.sol  AyniLiquidityPool.sol  AyniOracle.sol  AyniProtocol.sol  AyniSolverPool.sol  AyniVault.sol  AyniVaultCore.sol  AyniVaultFactory.sol  AyniVaultRegistry.sol  ManualPriceFeed.sol  WrappedZkLTC.sol
src/intents/: ERC7683.sol
src/interfaces/: IAggregatorV3.sol  IAyniClaimDebtRouter.sol  IAyniClaimOrigin.sol  IAyniFactory.sol  IAyniLiquidityPool.sol  IAyniOracle.sol  IAyniRegistry.sol  IAyniSolverPool.sol  IAyniVault.sol  IAyniVaultActions.sol  IAyniVaultRegistry.sol  IAyniVaultView.sol  IERC20.sol  IERC20Metadata.sol
src/mocks/: MockUSDC.sol  MockUSDT.sol
src/utils/: Clones.sol  Math.sol  ReentrancyGuard.sol  SafeERC20.sol
test/: AyniLiquidityPool.t.sol  AyniProtocol.t.sol  AyniProtocolFuzz.t.sol  AyniSolverPool.t.sol  AyniVaultInvariant.t.sol  TestBase.sol  WrappedZkLTC.t.sol
test/mocks/: MockAggregatorV3.sol  MockERC20.sol
